core#12 Fix word break in table headers

--- a/app/topologies/TableHeaderCell/TableHeaderCell.scss
+++ b/app/topologies/TableHeaderCell/TableHeaderCell.scss
@@ -3,4 +3,5 @@
 .TableHeaderCell {
   padding: units('small', 'large');
   text-align: left;
+  word-break: normal;
 }
